--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="crapstyle.css"/>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app1"></div>
+    <div id="app2"></div>
     <script src="cljs-out/dev-main.js"></script>
   </body>
 </html>
